[tool.poetry]
name = "infiniteremixer"
version = "0.1.0"
description = ""
authors = ["nroldanf <nicolas.roldan@mail.escuelaing.edu.co>"]

[tool.poetry.dependencies]
python = "^3.7"
librosa = "^0.8.1"
boto3 = "^1.18.6"
spotify-dl = "^7.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
pytest = "^6.2.4"
black = "^21.7b0"
isort = "5.8.0"
mypy = "^0.910"
flake8 = "^3.9.2"

[tool.pytest]
testpaths="tests/"

[tool.isort]
profile = "black"
skip_glob = [ "docs", "notes", ".venv", ".direnv"]

[tool.flake8]
ignore = "E203, E266, E501, W503"
max-line-length = "88"
max-complexity = "18"
select = "B,C,E,F,W,T4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"